# openssl-wasm

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
.github/workflows/: bench.yml  ci.yml  fuzz.yml  release.yml
config/: 50-wasm.conf
examples/host/: Cargo.toml  rustfmt.toml
examples/host/benches/: component_vs_native.rs
examples/host/src/: lib.rs  main.rs
examples/host/tests/: aes_kat.rs  bignum.rs  bignum_ext.rs  build_wit_bridge_stack.sh  cipher.rs  cipher_ext.rs  digest.rs  digest_ext.rs  dtls.rs  error.rs  kdf.rs  kdf_ext.rs  mac.rs  mac_ext.rs  pkey.rs  pkey_ext.rs  random.rs  random_ext.rs  robustness.rs  tls.rs  tls_mem_bio_loopback.rs  tls_pkcs11.rs  tls_server.rs  wit_bridge.rs  wit_bridge_pkcs11.rs  wit_bridge_stub_compose.wac  x509.rs  x509_ext.rs
examples/host/tests/wit/: world.wit
examples/host/tests/wit_tls/: world.wit
examples/https-fetch/: Cargo.toml
examples/https-fetch/src/: main.rs
examples/noop-provider/: .gitignore  README.md  build.sh
examples/noop-provider/src/: noop_impl.c
examples/noop-provider/wit/: world.wit
examples/sign-service/: Cargo.toml
examples/sign-service/src/: main.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: cert_parse.rs  cms_verify.rs  crl_parse.rs  csr_parse.rs  pkey_load_private.rs
scripts/: fetch-mozilla-ca.sh  gen-compile-commands.sh  gen-sbom.sh  gen-stubs.sh  install-wasi-sdk.sh
src/: aes_simd.c  aes_vpaes_todo.md  bignum.c  cipher.c  component.c  decoder_wit.c  encoder_wit.c  kdf.c  mac.c  pkey.c  provider_wit.c  store_wit.c  tls.c  wit_bridge_test.c  x509.c  x509_build.c
src/include/: algs.h  support.h
wit/: cipher.wit  digest.wit  mac.wit  pkey.wit  tls.wit  wit-bridge-test.wit  world.wit  x509.wit
