[package]
name = "openssl-wasm-host"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "openssl_wasm_host"
path = "src/lib.rs"

[[bin]]
name = "openssl-wasm-host"
path = "src/main.rs"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wasmtime = { version = "45", features = ["component-model", "component-model-async"] }
wasmtime-wasi = "45"

[dev-dependencies]
# Used for host-side TLS client in tests that exercise the component's
# TLS server implementation, and as the native baseline in benchmarks.
openssl = "0.10"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "component_vs_native"
harness = false

[workspace]
