[package]
name = "https-fetch"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wasmtime = { version = "45", features = ["component-model", "component-model-async"] }
wasmtime-wasi = "45"

[workspace]
