[package]
name = "sign-service"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
wasmtime = { version = "44", features = ["component-model", "component-model-async"] }
wasmtime-wasi = "44"

[workspace]
